# JaJuSung_HEVEN

./: README.md
PreProcessing/: README.md
PreProcessing/Camera/: camera_lidar_extrinsic_matrix.py  jiwan_0708.py  nakyeong_0814.py
PreProcessing/Camera/ColorFIlter/: jiwan_0708.py
PreProcessing/Fusion/: extract_point_coord.py  filter.py  fusion.py  make_pcd_from_topic.py  sensor_fusion.py  solvePnP.py
PreProcessing/Lidar/: cluster_extraction.py  utils.py
Ridar/: cluster_extraction.py  livox_cluster.py  velodyne_to_bev_node.py
main/: README.md
main/erp42_msgs/: CMakeLists.txt
main/erp42_msgs/msg/: FunctionCall.msg
main/jajusung_main/: CMakeLists.txt  package.xml
main/jajusung_main/bagfile/: 2024-10-31-16-17-52.bag  2024-11-01-01-56-49.bag  2024-11-01-03-47-49.bag  gps_test_1101.csv  pcy_gps.bag
main/jajusung_main/can/: auds_drive.dbc  can_interface.py  can_set.sh  set_manual.py
main/jajusung_main/config/: fusion_visualization.rviz  params.yaml
main/jajusung_main/fusion_main/: jedong_stanley.cpp  johyang_sensor_fusion.cpp  jonghap_sensor_fusion.cpp  main_jeddong.py  main_johyang.py  main_jonghap.py  sensor_fusion.cpp  stanley_fusion.cpp
main/jajusung_main/include/: EKFH.h  gps_stanley_h.h  gps_stanley_h_org.h  gps_stanley_usingekf_h.h  tracker.h
main/jajusung_main/launch/: jedong.launch  johyang.launch  jonghap.launch  main.launch  sensor.launch  test.launch
main/jajusung_main/msg/: HevenCtrlCmd.msg  lane_info.msg
main/jajusung_main/scripts/: check_fusion.py  yolo.py  yolov8_node.py
main/jajusung_main/src/: EKF_lane.cpp  cluster_extraction.py  ekf.py  gps_stanley.cpp  gps_stanley_0915.cpp  gps_stanley_main.cpp  gps_stanley_main_usingekf.cpp  gps_stanley_org.cpp  gps_stanley_usingekf.cpp  gps_test.csv  gps_test_0925.csv  gps_test_1030.csv  gps_test_1031.csv  gps_test_1101.csv  gps_test_pcy.csv  gps_to_csv.py  imu_publisher.py  lane_follower.cpp  lane_stanley.cpp  main_jeddong.py  sensor_fusion.cpp  sensor_fusion.py  stanley_controller_code.cpp  utils.py
main/jajusung_main/steer/: delaunay_triangle.py  deluna.cpp  deluna_stanley.py  path_planinng_spline.py  point_to_laserscan.py  stanley_following_erp.py
main/jajusung_main/test_files/: jonghap_mission.py  point_to_laserscan.py  steering_control.py
